# game-engine

./: .gitignore  CMakeLists.txt  imgui.ini
assets/: scene.json
include/glad/: glad.h
src/: glad.c  main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h
src/core/: Application.cpp  Application.h  ConsolePanel.cpp  ConsolePanel.h  Input.cpp  Input.h  Log.cpp  Log.h  SceneSerializer.cpp  SceneSerializer.h  Window.cpp  Window.h
src/ecs/: Components.h  ECS.h
src/graphics/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/scripting/: PlayerController.h  ScriptRegistry.h  ScriptableEntity.h
